Incremental Transformer Voltage Control: filter insensitive controllers
Signed-off-by: Damien Jeandemange <damien.jeandemange@artelys.com>